--- a/vcweb/static/css/lighterprints/style.css
+++ b/vcweb/static/css/lighterprints/style.css
@@ -46,17 +46,24 @@
 div.lighterprints-scoreboard {
     color: #A9A9A9;
 }
+.lighterprints-scoreboard-large {
+    font-size: 3em;
+    font-family: 'TrumpGothicWestW01-Bold', sans-serif;
+    color: #666666;
+}
 .lighterprints-scoreboard-xlarge {
     font-size: 5em;
     font-family: 'TrumpGothicWestW01-Bold', sans-serif;
-    color: #333;
+    color: #666666;
 }
 div.lighterprints-scoreboard h1 {
     font-size: 5em;
-    font-family: 'TrumpGothicWestW01-Medi', sans-serif;
+    color: #666666;
+    font-family: 'TrumpGothicWestW01-Bold', sans-serif;
 }
 div.lighterprints-scoreboard h2 {
     font-size: 4em;
+    color: #666666;
     font-family: 'TrumpGothicWestW01-Bold', sans-serif;
 }
 div.lighterprints-scoreboard h5 {
